[gd_scene load_steps=5 format=3 uid="uid://phase1_floating_origin_test"]

[ext_resource type="Script" path="res://scenes/features/floating_origin_test.gd" id="1"]

[sub_resource type="BoxMesh" id="ground_mesh"]
size = Vector3(1000, 1, 1000)

[sub_resource type="ConcavePolygonShape3D" id="ground_collision"]

[sub_resource type="BoxMesh" id="player_mesh"]
size = Vector3(0.5, 1.8, 0.5)

[node name="FloatingOriginTest" type="Node3D"]
script = ExtResource("1")

[node name="Ground" type="StaticBody3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.5, 0)

[node name="MeshInstance3D" type="MeshInstance3D" parent="Ground"]
mesh = SubResource("ground_mesh")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Ground"]
shape = SubResource("ground_collision")

[node name="Player" type="CharacterBody3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)

[node name="MeshInstance3D" type="MeshInstance3D" parent="Player"]
mesh = SubResource("player_mesh")

[node name="Camera3D" type="Camera3D" parent="Player"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.7, 0)

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.707107, 0.707107, 0, -0.707107, 0.707107, 0, 10, 0)
shadow_enabled = true

[node name="DistanceMarkers" type="Node3D" parent="."]

[node name="UI" type="CanvasLayer" parent="."]

[node name="StatusLabel" type="Label" parent="UI"]
offset_left = 10.0
offset_top = 10.0
offset_right = 600.0
offset_bottom = 200.0
theme_override_font_sizes/font_size = 16
text = "Floating Origin Test
Distance: 0 m
Universe Offset: (0, 0, 0)
Shifts: 0"
